feat :bulb: API CRUD SocialMedia-User
