# app/Http/Requests/API/SocialMediaUser/UpdateSocialMediaUserRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Requests\API\SocialMediaUser;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateSocialMediaUserRequest extends FormRequest
+{
+  /**
+   * Determine if the user is authorized to make this request.
+   *
+   * @return bool
+   */
+  public function authorize()
+  {
+    return true;
+  }
+
+  /**
+   * Get the validation rules that apply to the request.
+   *
+   * @return array<string, mixed>
+   */
+  public function rules()
+  {
+    return [
+      'url' => 'required|url'
+    ];
+  }
+}
